--- a/assets/css/customer.css
+++ b/assets/css/customer.css
@@ -64,9 +64,13 @@ article.items_in_cart div.cart_item_img {
 }
 
 .product_imgs ul li {
-    width: 25%;
+    width: 20%;
     list-style: none;
     cursor: pointer;
+
+    img {
+        height: 50px;
+    }
 }
 
 /* Chrome, Safari, Edge, Opera */
